EN format fix for buried building description

--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -14274,7 +14274,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Die Zone ist vollständig mit verrottender Vegetation, Sand und allem möglichen Schrott bedeckt. Du bist dir sicher, dass es hier etwas zu finden gibt, aber zunächst musst du diesen gesamten Sektor aufräumen um ihn vernünftig durchsuchen zu können.</source>
-        <target>The zone is completely covered with rotting vegetation, sand and all manner of debris. You are certain that there is something hidden here, but the whole sector needs to be cleared before it can be searched properly...</target>
+        <target><![CDATA[The zone is completely covered with <strong>rotting vegetation</strong>, <strong>sand</strong> and all manner of <strong>debris</strong>. You are certain that there is something hidden here, but the whole sector needs to be cleared before it can be searched properly...]]></target>
       </segment>
     </unit>
     <unit id="IDhWsfU" name="HAZ-Gewinner">
