ES format fix for buried building description

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -14256,7 +14256,7 @@
       </notes>
       <segment>
         <source>Die Zone ist vollständig mit verrottender Vegetation, Sand und allem möglichen Schrott bedeckt. Du bist dir sicher, dass es hier etwas zu finden gibt, aber zunächst musst du diesen gesamten Sektor aufräumen um ihn vernünftig durchsuchen zu können.</source>
-        <target>Toda la zona está cubierta por una vegetación putrefacta, con arena y chatarra de todo tipo. Estás seguro de que algo se esconde aquí, pero habría que despejar todo el terreno para empezar una veradera búsqueda...</target>
+        <target><![CDATA[Toda la zona está cubierta por una <strong>vegetación putrefacta</strong>, con <strong>arena</strong> y <strong>chatarra</strong> de todo tipo. Estás seguro de que algo se esconde aquí, pero habría que despejar todo el terreno para empezar una veradera búsqueda...]]></target>
       </segment>
     </unit>
     <unit id="IDhWsfU" name="HAZ-Gewinner">
