Fixed typo for citizens still alive in town tooltip

--- a/translations/soul.fr.xlf
+++ b/translations/soul.fr.xlf
@@ -532,7 +532,7 @@
       </notes>
       <segment>
         <source>Es sind in dieser Stadt noch ein paar Bürger übrig...</source>
-        <target>Il y a encore des citoyens vivant dans cette ville...</target>
+        <target>Il y a encore des citoyens vivants dans cette ville...</target>
       </segment>
     </unit>
     <unit id="YDybxz8" name="Standardsprache">
