FR Translation for tab name when we are on a ruin

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -15151,7 +15151,7 @@
       </notes>
       <segment>
         <source>in einer unheimlichen Ruine %location%</source>
-        <target>in einer unheimlichen Ruine %location%</target>
+        <target>au pied d'une ruine inquiétante %location%</target>
       </segment>
     </unit>
     <unit id="TP3m8zB" name="sitzt in der Falle und wartet auf den Tod...">
