FR Translation for tab name when we are 3 or more on a zone

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -18434,7 +18434,7 @@
       </notes>
       <segment>
         <source>als Gruppe</source>
-        <target>als Gruppe</target>
+        <target>en expédition de groupe</target>
       </segment>
     </unit>
     <unit id=".eKZbiD">
