Corrected typo for one of the random sponsorship messages

--- a/translations/soul.fr.xlf
+++ b/translations/soul.fr.xlf
@@ -3014,7 +3014,7 @@
       </notes>
       <segment>
         <source>Du bekommst einen frischen Atem - schnell und effektiv.</source>
-        <target>Vous obtiendrez une haleine freiche - rapide et efficace.</target>
+        <target>Vous obtiendrez une haleine fraiche - rapide et efficace.</target>
       </segment>
     </unit>
     <unit id="2rVePUl" name="Die Zombies werden dich lieben, dass du für Nachschub sorgst. ;)">
