FR Translation for info message when selecting an object to steal in the bank

--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -18902,7 +18902,7 @@
       </notes>
       <segment>
         <source>Wähle einen Gegenstand aus der Bank aus...</source>
-        <target>Wähle einen Gegenstand aus der Bank aus...</target>
+        <target>Choisissez l'objet que vous souhaitez voler dans la banque...</target>
       </segment>
     </unit>
     <unit id="B5sYzl." name="Aufklärer: Ruinen erkunden">
