--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -8045,7 +8045,7 @@
       </notes>
       <segment>
         <source>Du befielst diesem Bürger sich zu &lt;strong&gt;stärken&lt;/strong&gt;, damit ihr gemeinsam weiterziehen könnt. Er ist einverstanden und holt eine(e,n) {item} aus seinem Sack... Ihr macht ne kleine Brotzeit...{hr}{user} hat seine AP aufgefüllt!</source>
-        <target>Vous demandez à ce citoyen de manger quelque chose avant de continuer. Il acquiesce puis sort {item}... Petite pause repas...{hr}{user} a récupéré tout ses PA !</target>
+        <target>Vous demandez à ce citoyen de manger quelque chose avant de continuer. Il acquiesce puis sort {item} ... Petite pause repas...{hr}{user} a récupéré tous ses PA !</target>
       </segment>
     </unit>
     <unit id="gVu_1LO" name="Der Bürger hat das Wasser in einem Zug ausgetrunken. Das tut gut!">
